--- a/Landing/css/bootstrap.css
+++ b/Landing/css/bootstrap.css
@@ -5300,6 +5300,8 @@ a.thumbnail.active {
   margin-bottom: 20px;
   border: 1px solid transparent;
   border-radius: 4px;
+  border-radius: 4px;
+  font-size: 30px;
 }
 
 .alert h4 {
