--- a/Landing/css/vid.css
+++ b/Landing/css/vid.css
@@ -44,6 +44,9 @@
   position: absolute;
   top: 25%;
   width: 100%;
+  background-color: rgba(0, 0, 0, 0.51);
+  /*  margin-left: auto;
+  margin-right: auto;*/
   text-align: center;
   color: #fff;
 }
