--- a/Landing/css/coming-sssoon.css
+++ b/Landing/css/coming-sssoon.css
@@ -4,6 +4,9 @@ Made with love by Creative Tim (http://www.creative-tim.com)
 
 */
 
+.cursive {
+  margin-top: 100px;
+}
 .response {
   height: 50px;
   width: 100%;
