--- a/Landing/css/vid.css
+++ b/Landing/css/vid.css
@@ -42,8 +42,9 @@
 .title-container {
   z-index: 1000;
   position: absolute;
-  top: 25%;
+  top: 0;
   width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.51);
   /*  margin-left: auto;
   margin-right: auto;*/
